--- a/index.html
+++ b/index.html
@@ -33,6 +33,27 @@
     </header>
 
     <main>
+        <section class="featured-container">
+            <div class="featured-intro">
+                <h1 class="title">Our Featured Flowers</h1>
+                <p class="text-style">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="featured-items">
+                <div class="featured-flower">
+                    <img class="shobuh-ful" src="./assets/pngwing7.png">
+                    <h5>Pink Flower Tree</h5>
+                </div>
+                <div class="featured-flower">
+                    <img class="akashi-ful" src="./assets/pngwing5.png">
+                    <h5>Pink Flower Tree</h5>
+                </div>
+                <div class="featured-flower">
+                    <img class="golapi-ful" src="./assets/pngwing6.png">
+                    <h5>Pink Flower Tree</h5>
+                </div>
+            </div>
+        </section>
+
 
     </main>
 
