Completed the Service section.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,23 @@
             </div>
         </section>
 
-
+        <section class="service-container">
+            <div class="service-items">
+                <div class="service-item">
+                    <img src="./assets/Group57.png">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="service-item">
+                    <img src="./assets/Group58.png">
+                    <p>Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="service-item">
+                    <img src="./assets/Group59.png">
+                    <p>24/7 Free Support.</p>
+                </div>
+            </div>
+            
+        </section>
     </main>
 
     <footer>
