--- a/index.html
+++ b/index.html
@@ -69,8 +69,22 @@
                     <p>24/7 Free Support.</p>
                 </div>
             </div>
-            
         </section>
+
+        <section class="discount-container">
+            <div class="discount-section">
+                <div class="discount-contents">
+                    <h1 class="title">Hot Deal ! Sale Up To 25% <span>Off</span></h1>
+                    <p class="text-style">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <button>Sign Up</button>
+                </div>
+                <div class="discount-img">
+                    <img src="./assets/pngwing8.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        
     </main>
 
     <footer>
