Completed the Instagram section.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,19 @@
             </div>
         </section>
 
+        <section class="instagram-container">
+            <div class="instagram-intro">
+                <h1 class="title">Instagram</h1>
+                <p class="text-style">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="instagram-posts">
+                <img src="./assets/Rectangle5.png">
+                <img src="./assets/Rectangle4.png">
+                <img src="./assets/Rectangle6.png">
+                <img src="./assets/Flower1.png">
+            </div>
+        </section>
+
         
     </main>
 
