--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/responsive.css">
 
-    
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+
+
     <title>Flower Shop</title>
 </head>
 <body class="lato-font">
@@ -97,7 +100,7 @@
             </div>
         </section>
 
-        
+
     </main>
 
     <footer>
