Completed the Subscribe section.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,18 @@
             </div>
         </section>
 
-
+        <section class="subscribe-container">
+            <div class="subscribe-section">
+                <div class="subscribe-intro">
+                    <h1 class="title">Get The Latest Deals</h1>
+                    <p class="text-style">$30 coupon for first shopping</p>
+                </div>
+                <form>
+                    <input type="email" class="email-field" placeholder="Enter your email here....">
+                    <input type="submit" value="Subscribe" class="submit-btn lato-font">
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer>
