--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
     </main>
 
     <footer>
-
+        <section class="footer-container">
+            <h1 class="footer-title"><span>Flower</span>Shop</h1>
+            <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="copyright-text">@2020-2023, FlowerShop.com. All rights reserved.</p>
+        </section>
     </footer>
 </body>
 </html>
